Aula 46 Operadores Lógicos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "Aula",
         "Fazendo",
+        "Lógicos",
+        "Operadores",
         "resultado"
     ]
 }
