Aula 48 Desafio Operadores Lógicos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,17 @@
 {
     "cSpell.words": [
+        "aritimeticos",
         "Aula",
+        "Comprou",
+        "Desafio",
         "Fazendo",
         "Lógicos",
+        "Mais",
         "Operadores",
-        "resultado"
+        "Operaedor",
+        "resultado",
+        "saudável",
+        "Sorvete",
+        "Unário"
     ]
 }
