Aula 52 Operador ternário

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Aula",
         "Comprou",
         "Desafio",
+        "Exclusivo",
         "Fazendo",
         "Lógicos",
         "Mais",
@@ -12,6 +13,8 @@
         "resultado",
         "saudável",
         "Sorvete",
-        "Unário"
+        "Tabela",
+        "Unário",
+        "verdade"
     ]
 }
