Aula 53 Igualdade com String

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,12 @@
     "cSpell.words": [
         "aritimeticos",
         "Aula",
+        "branco",
         "Comprou",
         "Desafio",
+        "Digite",
+        "entrada",
+        "espaços",
         "Exclusivo",
         "Fazendo",
         "Lógicos",
@@ -11,6 +15,7 @@
         "Operadores",
         "Operaedor",
         "resultado",
+        "retira",
         "saudável",
         "Sorvete",
         "Tabela",
