Aula 57 Desafio do módulo - Calculadora

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Fazendo",
         "Lógicos",
         "Mais",
+        "número",
         "Operadores",
         "Operaedor",
         "resultado",
