--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Aula",
         "branco",
         "Comprou",
+        "contador",
         "Desafio",
         "Digite",
         "entrada",
